--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,3 +57,16 @@ textarea {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
 }
+
+.deleteBtn {
+  border-left: 1px solid black;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+  background-color: #d52f06;
+  color: white;
+}
+
+.deleteBtn i:hover {
+  font-size: 20px;
+  transition: all 0.3s ease-in-out;
+}
